# prismatic-engine

./: .env.template  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  COMMIT_CONVENTION.md  Dockerfile  Dockerfile.sandbox  JULES-SESSIONS.md  LICENSE  PRISMATIC_ENGINE.yaml  README.md  SOUL.md  beyondsaas-setup-guide.md  docker-compose.yml  index.html  install.sh  package-lock.json  prismatic-artifact-publisher.config.js  pyproject.toml  soul-alignment-guide.md  soul-alignment-matrix.md  style_guide.md  visual_qa.js  visual_qa_report.md
.github/: PULL_REQUEST_TEMPLATE_RATE_LIMIT.md
.venv_dev/: pyvenv.cfg
SKILLS/: README.md
config/: agents.yaml  pipelines.yaml  prismatic-engine-review-bot.2026-06-28.private-key.pem  workspaces.yaml
docs/: agy-research-metabolizer.md  architecture.md  bare-metal-onboarding-and-harness-compatibility.md  documentation-hub.md  dual-runtime-refactoring-map.md  extending.md  first-user-journey.md  gdrive-mcp-recovery.md  golden-path-verification-gates.md  gro-2907-branch-audit.md  journal-continuity-engine-phase1.md  linear-rate-limit-audit.md  mode-switch.md  next-bhag-agy-default-executor.md  phase-d-post-publish-chain.md  phone-first-command-surface.md  pre-push-hook-deployment.md  prismatic-golden-flow-v0.md  profile-vs-engine-dispatch.md  provider-playbook-claude-code.md  provider-playbook-github-copilot.md  provider-playbook-google-antigravity.md  provider-playbook-local-llm.md  provider-swap-decision-tree.md  research-metabolizer-utility.md  runbook.md  seven-step-loop.md  social-pipeline.md  standalone-command-center-and-plugin-workspaces.md
okf/: agy-activation-investigation.md  agy-peer-review.md  architecture.md  cloudflare-tunnel-webhooks.md  dispatch-architecture.md  dispatch-audit-and-fix.md  dispatch-production-grade.md  event-driven-dispatch.md  fleet-watchdog-standalone.md  index.md  journal-schema-drift-fix.md  linear-budget-lint-ci.md  linear-rate-limit.md  linear-webhook-events.md  memory-grooming.md  prismatic-engine-tasks.md  production-readiness-infrastructure.md  review-loop-canonical.md  session-state-2026-06-19.md  tier-7-architecture.md  tier-7-journey.md  webhook-handler-test-pattern.md  webhook-security.md
ops/: prismatic_decomposer.py
portable-skills/: INSTALL.md  export.py  export.sh  prismatic-fleet-defaults.yaml
prismatic/: __init__.py  admin.py  agent_cards.py  agy_live_parser.py  credit_policy_engine.py  credit_tracker.py  dedup.py  dispatcher.py  distributed_watchdog.py  doctor.py  errors.py  fleet_actions.py  fleet_watchdog.py  identity.py  integrate.py  journal.py  linear_budget.py  local_tasks.py  lock.py  master_build_orchestrator.py  mode_switch.py  plugin_health.py  rfr_loop.py  router.py  run_records.py  sandbox.py  schedules.py  skills.py  stale_lock_watcher.py  state_machine.py  telegram_controls.py  telemetry.py  telemetry_metrics.py  test_gro_2995_vertex_spend_writer.py  test_telemetry_extension.py  vertex_telemetry.py  workspace.py  workspace_router.py
reports/: AGY-briefing.md  agy-7-step-loop-design.md  agy-alchemy-mode-design.md  agy-capability-registry-design.md  agy-claude-code-build-pattern.md  agy-comprehensive-synthesis-briefing.md  agy-core-boundary-validation.md  agy-hermes-discovery-report.md  agy-implementation-plan.md  agy-instance-scheduler-design.md  agy-local-agent-architecture.md  agy-local-agent-roadmap.md  agy-local-models-current.md  agy-local-models-future.md  agy-portability-standalone-mode.md  agy-proposed-soul-amendments.md  agy-revised-agent-spawning-model.md  agy-swarm-rush-stress-test.md  agy-synthesis-report.md  alchemy-mode-fractal-complexity.md  core-evaluation.md  fred-briefing.md  rubric-assessment-2026-06-11.md
research/: 01-multi-agent-git-coordination-landscape.md
schemas/: schedule-event.schema.json  schedule-record.schema.json
scripts/: agy_hook.sh  agy_statusline_hook.sh  audit-checksums.py  branch-discipline.py  build_sandbox_image.sh  canary_deploy.sh  canary_test.sh  check-state-db-health.py  check_linear_cron_rate.sh  compile_proto.sh  drain_webhook_queue.py  export-prismatic-env.sh  gdocs-auth.py  gdocs-sync.py  gro-570-inventory-results.md  gro-571-tagging-results.md  heartbeat.sh  install-pre-push-hook.sh  linear_relabel.py  master_build_orchestrator.py  master_seed_verifier.py  migrate_paths.py  mock_linear_server.py  multi_platform_cooker.py  photo_tagging_system.py  pipeline_dashboard.py  pre-commit-hook.sh  pre-push-hook.py  prismatic-fleet-watchdog.service  promote.sh  (+22 more)
(+822 files in other folders)
