[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismatic-engine"
version = "0.1.0"
description = "Prismatic Engine — agent orchestration hub powered by Linear labels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
keywords = ["linear", "agent", "orchestration", "pipeline", "automation"]

authors = [
    {name = "Michael Gulden", email = "Michael@growthwebdev.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
http = ["requests>=2.31"]
gateway = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "grpcio>=1.81"]
grpc = ["grpcio>=1.81"]
redis = ["redis>=5.0"]
all = ["prismatic-engine[http,redis,gateway]"]

[project.urls]
Homepage = "https://github.com/mbgulden/prismatic-engine"
Documentation = "https://github.com/mbgulden/prismatic-engine"

[project.scripts]
prismatic-engine = "prismatic.dispatcher:main"
prismatic-engine-skills = "prismatic.skills:cli_skills"
prismatic-lock = "prismatic.lock:main"
prismatic-admin = "prismatic.admin:main"
prismatic-gateway = "prismatic.gateway.server:main"

[tool.setuptools.packages.find]
include = ["prismatic*"]

[tool.setuptools.package-data]
prismatic = ["skills/**/*", "templates/**/*"]
