[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismatic-engine"
version = "0.2.0"
description = "Prismatic Engine — agent orchestration hub powered by Linear labels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
keywords = ["linear", "agent", "orchestration", "pipeline", "automation"]

authors = [
    {name = "Michael Gulden", email = "Michael@growthwebdev.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
http = ["requests>=2.31"]
redis = ["redis>=5.0"]
all = ["prismatic-engine[http,redis]"]

[project.urls]
Homepage = "https://github.com/mbgulden/prismatic-engine"
Documentation = "https://github.com/mbgulden/prismatic-engine"

[project.scripts]
prismatic-engine = "prismatic.dispatcher:main"
prismatic-engine-skills = "prismatic.skills:cli_skills"
prismatic-lock = "prismatic.lock:main"
prismatic-admin = "prismatic.admin:main"
prismatic-gateway = "prismatic.gateway.server:main"
prismatic-api = "prismatic.api.server:run"

[tool.setuptools.packages.find]
include = ["prismatic*"]

[tool.setuptools.package-data]
prismatic = ["skills/**/*", "templates/**/*"]

# ─────────────────────────────────────────────────────────────────────
# Plugin entry points (Gap 9 / Part B)
# ─────────────────────────────────────────────────────────────────────
# Third-party plugins register themselves under the "prismatic.plugins"
# group. Prismatic Engine queries this group at startup via
# importlib.metadata.entry_points(group="prismatic.plugins") to discover
# installed plugins. See prismatic/review/registry.py for the registry
# API plugins use to contribute patterns, checks, and impact rules.
#
# Example plugin pyproject.toml:
#   [project.entry-points."prismatic.plugins"]
#   my_check_plugin = "my_check_pkg:register"
#
# Example plugin entry point:
#   def register(registry: ReviewerRegistry) -> None:
#       registry.register_check(my_custom_check, name="my_check")

[project.entry-points."prismatic.plugins"]
# No built-in plugins ship with Prismatic Engine itself.
# Add entries here only when integrating an internal plugin that lives
# in the main repo (e.g. a security-policy plugin). External plugins
# declare their own entry points in their own pyproject.toml.
